Self_Paced_Exercices/Traffic_Management/_DOESNT_WORK_Gateway_HTTPS_HTTPS_Backend/answer/PeerAuthentcation.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default
spec:
  #mtls:
  #  mode: DISABLE
  selector:
    matchLabels:
      app: helloworld
  mtls:
    mode: DISABLE
  portLevelMtls:
    443:
      mode: DISABLE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default
spec:
  mtls:
    mode: DISABLE
