Self_Paced_Exercices/Traffic_Management/_DOESNT_WORK_Gateway_HTTPS_HTTPS_Backend/answer/DestinationRule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: https-helloworld
spec:
  host: helloworld.default.svc.cluster.local
  subsets:
    - name: https
      trafficPolicy:
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
    - name: default
